tdf#118569 Signature Line: When signing ooxml, only show X.509 certificates

Also fixes a bug where signing was aborted after saving as docx.

Change-Id: Ic42b7de2400be0bc55da03b017a545ceaedef9f9
Reviewed-on: https://gerrit.libreoffice.org/60480
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit 9b4c6892630a98c1218aca72827f718184a4b5f0)